--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "electron": "^2.0.0"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "vue": "^2.5.17"
   }
 }
